--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vim/bundle/tasklist"]
 	path = vim/bundle/tasklist
 	url = https://github.com/vim-scripts/TaskList.vim.git
+[submodule "vim/bundle/pydiction"]
+	path = vim/bundle/pydiction
+	url = git://github.com/vim-scripts/Pydiction.git
